examples/test/testpolicy9303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9303
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key2: value47
      key28: value6
      key15: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value44
      podSelector:
        matchLabels:
          key27: value27
